--- a/css/rules.css
+++ b/css/rules.css
@@ -15,6 +15,7 @@ div.rules_enum {
 	position: relative;
 	margin-top: -30px;
 	margin-left: 50px;
+	margin-right: 150px;
 	top: -120px;
 }
 div.diamond_section {
